--- a/door3.html
+++ b/door3.html
@@ -20,7 +20,7 @@
         </iframe>
     </div>
     <br>
-    <a class="reset2" href="main.html">Play Again</a>
+    <a class="reset2" href="index.html">Play Again</a>
 </body>
 
 </html>
