--- a/winner.html
+++ b/winner.html
@@ -24,7 +24,7 @@
 
 
     </div>
-    <a class="reset" href="main.html">Play Again</a>
+    <a class="reset" href="index.html">Play Again</a>
 </body>
 
 </html>
