--- a/door1.html
+++ b/door1.html
@@ -19,7 +19,7 @@
         <iframe width="420" height="345" src="https://www.youtube.com/embed/T-B4ArMieLs">
         </iframe>
     </div>
-    <a class="reset" href="main.html">Play Again</a>
+    <a class="reset" href="index.html">Play Again</a>
 
 </body>
 
