--- a/winner.html
+++ b/winner.html
@@ -14,7 +14,7 @@
     </audio>
     <div class="top-container">
         <p> You opened the Green Door which held a Suprise... </p>
-        <img class="losetext" src="images/you-win.jpg" alt="">
+        <img class="losetext" src="images/winner-pic.webp" alt="">
     </div>
 
     <br>
